<resources>
    <string name="loadingIcon">播放中</string>
    <string name="playIcon">播放</string>
    <string name="stopIcon">停止</string>


    <string-array name="planets_array">
        <item>Mer</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>

    <string-array name="mulitimedia_camera_values">
        <item>0</item>
        <item>1</item>
        <!--<item>2</item>-->
        <!--<item>3</item>-->
        <!--<item>4</item>-->
    </string-array>

    <string name="mulitimedia_camera_default_values">0</string>
    <string-array name="mulitimedia_camera">

        <item>自定义相机1</item>
        <item>系统相机</item>
        <!--<item>自定义相机2</item>-->
        <!--<item>google-camera</item>-->
        <!--<item>涂图相机</item>-->

    </string-array>
    <string-array name="mulitimedia_video">

        <item>系统录像</item>
        <!--<item>自定义视频1</item>-->
        <!--<item>自定义视频2</item>-->
    </string-array>
    <string name="mulitimedia_video_default_values">5</string>
    <string-array name="mulitimedia_video_values">
        <item>5</item>
        <!--<item>6</item>-->
        <!--<item>7</item>-->
    </string-array>
    <string name="mulitimedia_camera_audio_default_values">8</string>
    <string name="contentdescription">contentDescription</string>
    <string-array name="mulitimedia_camera_audio">
        <item>8</item>
        <!--<item>9</item>-->
        <!--<item>10</item>-->

    </string-array>

    <string-array name="mulitimedia_audit">
        <item>系统录音</item>
        <!--<item>自定义录音1</item>-->
        <!--<item>自定义录音2</item>-->

    </string-array>

    <string name="picture_error">图片已损坏</string>
    <string name="picture_video_error">视频已损坏</string>
    <string name="picture_audio_error">音频已损坏</string>
    <string name="picture_gif_tag">动图</string>
    <string name="picture_long_chart">长图</string>
    <string name="picture_take_picture">拍摄</string>
    
    <string-array name="camera_flash_view">
        <item>自动模式</item>
        <item>电筒模式</item>
        <item>关闭</item>
    </string-array>

    <string-array name="camera_flash_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="camera_flash_def_value">1</string>

    <string-array name="camera_volume_key_control">
        <item>无</item>
        <item>拍照</item>
        <item>预览缩放</item>
    </string-array>

    <string name="app_drag_delete">拖动到此处删除</string>
    <string name="app_let_go_drag_delete">松手即可删除</string>

    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">确定要删除当前拍摄照片?</string>
    <string name="delete_title">提示</string>


    <string name="permission_camera_rationale">需要摄像头权限才能显示相机预览！.</string>
    <string name="permission_contacts_rationale">Contacts permissions are needed to demonstrate access to the contacts database.</string>
    <string name="permission_camera_denied">摄像头权限被拒绝. 请给予权限否则无法访问摄像头!</string>
    <string name="permission_camera_never_ask_again">摄像头无法访问,且此权限被设置为不再询问.请自行打开权限</string>

    <string name="permission_audio_rationale">需要录音权限才能录音！.</string>
    <string name="permission_record_audio_denied">录音权限被拒绝. 请给予权限否则无法录音!</string>
    <string name="permission_record_audio_never_ask_again">录音权限无法访问,且此权限被设置为不再询问.请自行打开权限</string>
  <string name="timer">00:00:00</string>
</resources>
